# Architecture

lab1/: docker-compose.yml  workspace.dsl  workspace.json
lab2/: .dockerignore  CMakeLists.txt  Dockerfile  UserServer.out  compile.sh  database.cpp  docker-compose.yml  get.lua  index.yml  main.cpp  user.cpp  user.h
lab3/: .dockerignore  CMakeLists.txt  Dockerfile  TravelServer.out  database.cpp  database.h  docker-compose.yml  fill_db.sh  generate_data.py  index.yml  main.cpp  routes.json  start.sh  travel.cpp  travel.h  travels.json
lab4/: .dockerignore  docker-compose.yml  travel.Dockerfile  user.Dockerfile
lab4/travel_service/: generate_data.py  index.yml  main.cpp
lab4/travel_service/handler/: travel.cpp  travel.h
lab4/user_service/: CMakeLists.txt  index.yml  main.cpp  test.sh
lab4/user_service/database/: postgresql_database.cpp  postgresql_database.h
lab4/user_service/handler/: user.cpp  user.h
lab5/: docker-compose.yml  travel.Dockerfile
lab5/api_gateway/: CMakeLists.txt  main.cpp
lab5/api_gateway/database/: cache.h
lab5/api_gateway/handler/: api.cpp
lab5/travel_service/: TravelServer.out  compile.sh  index.yml
lab5/user_service/: UserServer.out  load_json.py  start.sh
lab6/: .dockerignore  api.Dockerfile
lab6/api_gateway/: CMakeLists.txt  compile.sh  index.yaml
lab6/api_gateway/circuit_breaker/: circuit_breaker.cpp  circuit_breaker.h
lab6/api_gateway/database/: cache.cpp
lab6/api_gateway/handler/: api.cpp  api.h
lab6/travel_service/: CMakeLists.txt  start.sh
lab6/travel_service/database/: mongo_database.cpp
lab6/travel_service/handler/: travel.cpp
lab6/user_service/: ExportJson.json
lab6/user_service/handler/: user.cpp
